--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="Web site created using create-snowpack-app" />
+        <meta name="description" content="Ball Game" />
         <title>Ball Game</title>
     </head>
 
